[build-system]
requires  =  ["setuptools", "wheel"]
build-backend  =  "setuptools.build_meta"

[project]
name = "salmorejo"
version = "RELEASE_VERSION"
authors = [{name = "Gonzalo Gabriel Jiménez Fuentes", email = "iam@mendrugory.com"}]
description = "Tool for testing and debugging Kubernetes events/changes in real time"
license = { file = "LICENSE" }
keywords = ["salmorejo", "kubernetes", "watcher"]
dependencies = [
    'click == 8.1.3',
    'kubernetes == 24.2.0',
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
dev = ["beautifultable==1.1.0"]

[project.urls]
Homepage = "https://github.com/mendrugory/salmorejo"

[project.scripts]
salmorejo = "salmorejo.__main__:main"